--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "My Blogs Name"
-author: "Default Author Name"
+title: "Ramblings"
+author: "Me."
 description: "A personal blog." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
